<resources>
    <string name="app_name">墨纸壁纸</string>
    <string name="gallery">图库</string>
    <string name="favorite">收藏</string>
    <string name="mine">我的</string>
    <string name="settings">设置</string>
    <string name="back">返回</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="set_lockscreen">设为锁屏</string>
    <string name="set_both">同时设置</string>
    <string name="add_to_favorite">添加收藏</string>
    <string name="remove_from_favorite">取消收藏</string>
    <string name="loading">加载中...</string>
    <string name="error_network">网络错误</string>
    <string name="error_load">加载失败</string>
    <string name="retry">重试</string>
    <string name="empty_favorite">暂无收藏</string>
    <string name="download_success">下载成功</string>
    <string name="download_failed">下载失败</string>
    <string name="set_wallpaper_success">设置成功</string>
    <string name="set_wallpaper_failed">设置失败</string>
</resources>
